--- a/package.json
+++ b/package.json
@@ -21,8 +21,16 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/moment": "^2.13.0",
+    "angularfire2": "^5.0.0-rc.3",
+    "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
+    "firebase": "^4.7.1",
+    "jquery": "^3.3.1",
+    "moment": "^2.20.1",
+    "moment-duration-format": "^2.2.2",
     "rxjs": "^5.5.6",
+    "tether": "^1.4.3",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
