--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@types/moment": "^2.13.0",
+    "angular-flash-message": "^3.4.0",
+    "angular2-flash-messages": "^2.0.5",
     "angularfire2": "^5.0.0-rc.3",
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
