--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "firebase": "^4.7.1",
+    "gulp-sourcemaps": "^2.6.4",
     "jquery": "^3.3.1",
     "moment": "^2.20.1",
     "moment-duration-format": "^2.2.2",
