--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment-duration-format": "^2.2.2",
     "rxjs": "^5.5.6",
     "tether": "^1.4.3",
+    "typed.js": "^2.0.6",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
